Adding additional Dockerfiles and docker-compose.yml file

--- a/Homework 4/microservices/fundamental_analysis_service/Dockerfile
+++ b/Homework 4/microservices/fundamental_analysis_service/Dockerfile
@@ -1,12 +1,19 @@
-FROM python:3.7-slim
+FROM python:3.9-slim
+
+COPY microservices/fundamental_analysis_service/ /app
+COPY shared_logic /app/shared_logic
+
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libopenblas-dev \
+    liblapack-dev \
+    libx11-dev \
+    libgfortran5 \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
 
 EXPOSE 5003
 
