--- a/Homework 4/microservices/issuers_scraping_service/Dockerfile
+++ b/Homework 4/microservices/issuers_scraping_service/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY . /app
+COPY microservices/issuers_scraping_service/ /app
+COPY shared_logic /app/shared_logic
 
-RUN pip install --no-cache-dir -r requirements.txt.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5001
 
