--- a/Homework 4/microservices/most_liquid_service/Dockerfile
+++ b/Homework 4/microservices/most_liquid_service/Dockerfile
@@ -2,11 +2,10 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
+COPY microservices/most_liquid_service/ /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
 
 EXPOSE 5005
 
